--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
 {
-  "name": "loja",
-  "version": "0.0.0",
+  "name": "minhas-tarefas",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.7",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.12",
-    "@types/react": "^18.3.8",
-    "@types/react-dom": "^18.3.0",
-    "@types/react-redux": "^7.1.33",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-router-dom": "^5.3.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.2",
-    "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
-    "react-toastify": "^10.0.5",
-    "styled-components": "^6.1.13",
-    "typescript": "^3.9.10",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -28,7 +24,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -48,19 +43,16 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^x.x.x",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@types/hoist-non-react-statics": "^3.3.5",
-    "@types/styled-components": "^5.1.34",
-    "@types/testing-library__jest-dom": "^6.0.0",
+    "react-router-dom": "^ 6.26.2",
+    "@types/react-router-dom": "^5.3.0",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^8.7.0",
     "@typescript-eslint/parser": "^8.7.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^8.10.0",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "json-server": "^0.17.1",
-    "prettier": "^2.8.3"
+    "prettier": "^2.8.4"
   }
 }
